--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -1,4 +1,4 @@
-name: Build and Push
+name: Build and Push Multi-Arch Images
 
 # Run workflow on pushes to main branch
 on:
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build and Push
-        uses: ./.github/actions/build-push
+        uses: ./.github/actions/build-push-multi-arch
         with:
           workspace: ros2-ws
           base_tag: galactic
@@ -50,7 +50,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build and Push
-        uses: ./.github/actions/build-push
+        uses: ./.github/actions/build-push-multi-arch
         with:
           workspace: ros2-ws
           base_tag: humble
@@ -66,7 +66,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build and Push
-        uses: ./.github/actions/build-push
+        uses: ./.github/actions/build-push-multi-arch
         with:
           workspace: ros2-control-libraries
           base_tag: galactic
@@ -96,7 +96,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build and Push
-        uses: ./.github/actions/build-push
+        uses: ./.github/actions/build-push-multi-arch
         with:
           workspace: ros2-control-libraries
           base_tag: humble
@@ -126,7 +126,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build and Push
-        uses: ./.github/actions/build-push
+        uses: ./.github/actions/build-push-multi-arch
         with:
           workspace: ros2-control-libraries
           base_tag: galactic
@@ -155,7 +155,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build and Push
-        uses: ./.github/actions/build-push
+        uses: ./.github/actions/build-push-multi-arch
         with:
           workspace: ros2-modulo
           base_tag: galactic-devel
@@ -184,7 +184,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build and Push
-        uses: ./.github/actions/build-push
+        uses: ./.github/actions/build-push-multi-arch
         with:
           workspace: ros2-modulo
           base_tag: humble-devel
@@ -213,7 +213,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build and Push
-        uses: ./.github/actions/build-push
+        uses: ./.github/actions/build-push-multi-arch
         with:
           workspace: ros2-modulo
           base_tag: galactic
@@ -242,10 +242,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build and Push
-        uses: ./.github/actions/build-push
+        uses: ./.github/actions/build-push-multi-arch
         with:
           workspace: ros2-modulo-control
           base_tag: galactic-devel
+          dockerfile_extension: .galactic
           ci_branch: ${{ env.CI_BRANCH }}
           secret: ${{ secrets.GITHUB_TOKEN }}
 
@@ -258,10 +259,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build and Push
-        uses: ./.github/actions/build-push
+        uses: ./.github/actions/build-push-multi-arch
         with:
           workspace: ros2-modulo-control
           base_tag: humble-devel
+          dockerfile_extension: .humble
           ci_branch: ${{ env.CI_BRANCH }}
           secret: ${{ secrets.GITHUB_TOKEN }}
 
@@ -274,9 +276,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build and Push
-        uses: ./.github/actions/build-push
+        uses: ./.github/actions/build-push-multi-arch
         with:
           workspace: ros2-modulo-control
           base_tag: galactic
+          dockerfile_extension: .galactic
           ci_branch: ${{ env.CI_BRANCH }}
           secret: ${{ secrets.GITHUB_TOKEN }}
