--- a/.github/workflows/check-upstream-devel.yml
+++ b/.github/workflows/check-upstream-devel.yml
@@ -89,14 +89,6 @@ jobs:
           ci_branch: ${{ env.CI_BRANCH }}
           secret: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Write hash to file and push to ci branch
-        if: ${{ needs.check-hash.outputs.cl_rebuild == 'true' }}
-        uses: ./.github/actions/write-hash
-        with:
-          hash: ${{ needs.check-hash.outputs.cl_id }}
-          file: './control-libraries-develop-hash'
-          ci_branch: ${{ env.CI_BRANCH }}
-
   rebuild-modulo-galactic-image:
     needs: [check-hash, rebuild-cl-galactic-image]
     runs-on: ubuntu-latest
@@ -160,14 +152,6 @@ jobs:
           ci_branch: ${{ env.CI_BRANCH }}
           secret: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Write hash to file and push to ci branch
-        if: ${{ needs.check-hash.outputs.cl_rebuild == 'true' }}
-        uses: ./.github/actions/write-hash
-        with:
-          hash: ${{ needs.check-hash.outputs.cl_id }}
-          file: './control-libraries-humble-develop-hash'
-          ci_branch: ${{ env.CI_BRANCH }}
-
   rebuild-modulo-humble-image:
     needs: [ check-hash, rebuild-cl-humble-image ]
     runs-on: ubuntu-latest
@@ -210,3 +194,19 @@ jobs:
           dockerfile_extension: .humble
           ci_branch: ${{ env.CI_BRANCH }}
           secret: ${{ secrets.GITHUB_TOKEN }}
+
+  write-cl-hash:
+    needs: [ rebuild-cl-galactic-image, rebuild-cl-humble-image ]
+    runs-on: ubuntu-latest
+    name: Write the control libraries hash to file
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Write hash to file and push to ci branch
+        if: ${{ needs.check-hash.outputs.cl_rebuild == 'true' }}
+        uses: ./.github/actions/write-hash
+        with:
+          hash: ${{ needs.check-hash.outputs.cl_id }}
+          file: './control-libraries-develop-hash'
+          ci_branch: ${{ env.CI_BRANCH }}
