Update actions with UBUNTU_VERSION args

--- a/.github/actions/build-push/action.yml
+++ b/.github/actions/build-push/action.yml
@@ -71,11 +71,18 @@ runs:
         BASE_TAG=${{ env.BASE_TAG }}
         IMAGE_NAME=${{ env.IMAGE_NAME }}
         DOCKERFILE=${WORKSPACE_PATH}/Dockerfile${{ inputs.dockerfile_extension }}
+        
+        if [[ "${BASE_TAG}" == *"galactic"* ]]; then
+          UBUNTU_VERSION=bionic-beaver
+        else
+          UBUNTU_VERSION=jammy-jellyfish
+        fi
 
         mkdir -p ${WORKSPACE_PATH}/config
         cp common/sshd_entrypoint.sh ${WORKSPACE_PATH}/config/
         docker build ${WORKSPACE_PATH} --file ${DOCKERFILE} \
           --build-arg BASE_TAG=${BASE_TAG} \
+          --build-arg UBUNTU_VERSION=${UBUNTU_VERSION} \
           --build-arg CL_BRANCH=${{ inputs.cl_branch }} \
           --build-arg MODULO_BRANCH=${{ inputs.modulo_branch }} \
           --tag ${IMAGE_NAME}
