--- a/ros2_control_libraries/Dockerfile
+++ b/ros2_control_libraries/Dockerfile
@@ -1,11 +1,22 @@
 ARG BASE_IMAGE=ghcr.io/aica-technology/ros2-ws
 ARG BASE_TAG=galactic
-FROM ${BASE_IMAGE}:${BASE_TAG}
-WORKDIR ${HOME}
+ARG UBUNTU_VERSION=focal-fossa
+FROM ${BASE_IMAGE}:${BASE_TAG} as jammy-jellyfish
 
 # install development dependencies
-COPY --from=ghcr.io/epfl-lasa/control-libraries/development-dependencies:latest /usr/local /tmp/local
+COPY --from=ghcr.io/epfl-lasa/control-libraries/development-dependencies:22.04 /usr/local /tmp/local
 RUN sudo cp -R /tmp/local/* /usr/local && sudo rm -r /tmp/local
+
+
+FROM ${BASE_IMAGE}:${BASE_TAG} as focal-fossa
+
+# install development dependencies
+COPY --from=ghcr.io/epfl-lasa/control-libraries/development-dependencies:20.04 /usr/local /tmp/local
+RUN sudo cp -R /tmp/local/* /usr/local && sudo rm -r /tmp/local
+
+
+FROM ${UBUNTU_VERSION}
+WORKDIR ${HOME}
 
 RUN sudo ldconfig
 
