--- a/.github/actions/build-push/action.yml
+++ b/.github/actions/build-push/action.yml
@@ -89,6 +89,7 @@ runs:
           --build-arg CL_BRANCH=${{ inputs.cl_branch }} \
           --build-arg MODULO_BRANCH=${{ inputs.modulo_branch }} \
           --tag ${IMAGE_NAME}
+        rm -rf ${WORKSPACE_PATH}/config
       shell: bash
 
     - name: Login to GitHub Container Registry
