--- a/ros2_modulo_control/Dockerfile.galactic
+++ b/ros2_modulo_control/Dockerfile.galactic
@@ -1,5 +1,5 @@
 ARG BASE_IMAGE=ghcr.io/aica-technology/ros2-modulo
-ARG BASE_TAG=galactic
+ARG BASE_TAG=humble
 FROM ${BASE_IMAGE}:${BASE_TAG} as ros2-control-sources
 USER ${USER}
 
