--- a/.github/actions/build-push/action.yml
+++ b/.github/actions/build-push/action.yml
@@ -12,7 +12,7 @@ inputs:
   base_tag:
     description: 'The tag of the base image to use'
     required: false
-    default: 'galactic'
+    default: 'humble'
   cl_branch:
     description: 'The branch of control libraries'
     required: false
@@ -89,7 +89,6 @@ runs:
           --build-arg CL_BRANCH=${{ inputs.cl_branch }} \
           --build-arg MODULO_BRANCH=${{ inputs.modulo_branch }} \
           --tag ${IMAGE_NAME}
-        rm -rf ${WORKSPACE_PATH}/config
       shell: bash
 
     - name: Login to GitHub Container Registry
@@ -108,7 +107,7 @@ runs:
       run: |
         git config user.name github-actions
         git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-        git fetch origin ${{ inputs.ci_branch }} && git checkout ${{ inputs.ci_branch }} && git rebase origin/main
+        git fetch origin ${{ inputs.ci_branch }} && git checkout ${{ inputs.ci_branch }} && git reset --hard HEAD && git rebase origin/main
         SHA=$(docker images --no-trunc --quiet ${IMAGE_NAME})
         echo ${SHA} > ./${{ env.WORKSPACE_PATH }}/${{ env.OUTPUT_TAG }}-hash
         git add ./${{ env.WORKSPACE_PATH }}/${{ env.OUTPUT_TAG }}-hash
