--- a/.github/actions/build-push-multi-arch/action.yml
+++ b/.github/actions/build-push-multi-arch/action.yml
@@ -112,7 +112,7 @@ runs:
         git config user.name github-actions
         git config user.email 41898282+github-actions[bot]@users.noreply.github.com
         git fetch origin ${{ inputs.ci_branch }} && git checkout ${{ inputs.ci_branch }} && git reset --hard HEAD && git rebase origin/main
-        SHA=$(docker images --no-trunc --quiet ${IMAGE_NAME})
+        SHA=$(docker images --no-trunc --quiet ghcr.io/${{ github.repository_owner }}/${IMAGE_NAME})
         echo ${SHA} > ./${{ env.WORKSPACE_PATH }}/${{ env.OUTPUT_TAG }}-hash
         git add ./${{ env.WORKSPACE_PATH }}/${{ env.OUTPUT_TAG }}-hash
         git commit -m "Update ${{ env.IMAGE_NAME }} image hash" && git push -f
