--- a/.github/actions/build-push-multi-arch/action.yml
+++ b/.github/actions/build-push-multi-arch/action.yml
@@ -104,6 +104,8 @@ runs:
           --build-arg CL_BRANCH=${{ inputs.cl_branch }} \
           --build-arg MODULO_BRANCH=${{ inputs.modulo_branch }} \
           ${WORKSPACE_PATH}
+        SHA=$(docker buildx imagetools inspect ghcr.io/${{ github.repository_owner }}/${IMAGE_NAME} | grep Digest)
+        echo "SHA=${SHA##*sha256:}" >> $GITHUB_ENV
       shell: bash
 
     - name: Write new image hash to file
@@ -111,10 +113,8 @@ runs:
       run: |
         git config user.name github-actions
         git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-        git fetch origin ${{ inputs.ci_branch }} && git checkout ${{ inputs.ci_branch }} && git reset --hard HEAD && git rebase origin/main
-        docker pull ghcr.io/${{ github.repository_owner }}/${IMAGE_NAME})
-        SHA=$(docker images --no-trunc --quiet ghcr.io/${{ github.repository_owner }}/${IMAGE_NAME})
-        echo ${SHA} > ./${{ env.WORKSPACE_PATH }}/${{ env.OUTPUT_TAG }}-hash
+        git reset --hard HEAD && git fetch origin ${{ inputs.ci_branch }} && git checkout ${{ inputs.ci_branch }} && git rebase origin/main
+        echo ${{ env.SHA }} > ./${{ env.WORKSPACE_PATH }}/${{ env.OUTPUT_TAG }}-hash
         git add ./${{ env.WORKSPACE_PATH }}/${{ env.OUTPUT_TAG }}-hash
         git commit -m "Update ${{ env.IMAGE_NAME }} image hash" && git push -f
       shell: bash
