--- a/.github/actions/build-push/action.yml
+++ b/.github/actions/build-push/action.yml
@@ -89,6 +89,8 @@ runs:
           --build-arg CL_BRANCH=${{ inputs.cl_branch }} \
           --build-arg MODULO_BRANCH=${{ inputs.modulo_branch }} \
           --tag ${IMAGE_NAME}
+        SHA=$(docker images --no-trunc --quiet ${IMAGE_NAME})
+        echo "SHA=${SHA}" >> $GITHUB_ENV
       shell: bash
 
     - name: Login to GitHub Container Registry
@@ -107,9 +109,8 @@ runs:
       run: |
         git config user.name github-actions
         git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-        git fetch origin ${{ inputs.ci_branch }} && git checkout ${{ inputs.ci_branch }} && git reset --hard HEAD && git rebase origin/main
-        SHA=$(docker images --no-trunc --quiet ${IMAGE_NAME})
-        echo ${SHA} > ./${{ env.WORKSPACE_PATH }}/${{ env.OUTPUT_TAG }}-hash
+        git reset --hard HEAD && git fetch origin ${{ inputs.ci_branch }} && git checkout ${{ inputs.ci_branch }} && git rebase origin/main
+        echo ${{ env.SHA }} > ./${{ env.WORKSPACE_PATH }}/${{ env.OUTPUT_TAG }}-hash
         git add ./${{ env.WORKSPACE_PATH }}/${{ env.OUTPUT_TAG }}-hash
         git commit -m "Update ${{ env.IMAGE_NAME }} image hash" && git push -f
       shell: bash
