--- a/.github/actions/write-hash/action.yml
+++ b/.github/actions/write-hash/action.yml
@@ -25,7 +25,7 @@ runs:
       run: |
         git config user.name github-actions
         git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-        git fetch origin ${{ inputs.ci_branch }} && git checkout ${{ inputs.ci_branch }} && git rebase origin/main
+        git reset --hard HEAD && git fetch origin ${{ inputs.ci_branch }} && git checkout ${{ inputs.ci_branch }} && git rebase origin/main
         echo ${{ inputs.hash }} > ${{ inputs.file }}
         git add ${{ inputs.file }}
         git commit -m "Update hash in ${{ inputs.file }}" && git push -f
