--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -183,20 +183,20 @@ jobs:
         with:
           workspace: ros2-modulo
           base_tag: humble-devel
-          modulo_branch: humble
+          modulo_branch: develop
           ci_branch: ${{ env.CI_BRANCH }}
           secret: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Get modulo humble hash
+      - name: Get modulo develop hash
         run: |
-          HASH=$(git ls-remote https://github.com/epfl-lasa/modulo.git humble | awk '{ print $1 }')
-          echo "MODULO_HUMBLE_HASH=${HASH}" >> $GITHUB_ENV
+          HASH=$(git ls-remote https://github.com/epfl-lasa/modulo.git develop | awk '{ print $1 }')
+          echo "MODULO_DEVELOP_HASH=${HASH}" >> $GITHUB_ENV
 
       - name: Write hash
         uses: ./.github/actions/write-hash
         with:
-          hash: ${{ env.MODULO_HUMBLE_HASH }}
-          file: ./modulo-humble-hash
+          hash: ${{ env.MODULO_DEVELOP_HASH }}
+          file: ./modulo-develop-hash
           ci_branch: ${{ env.CI_BRANCH }}
 
   build-publish-humble-modulo:
